# fastapi-boilerplate

./: .env-example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 53a0821b1254_create_user_table.py
src/apps/users/: routers.py
src/apps/users/entities/: user.py
src/apps/users/models/: user.py
src/apps/users/repositories/: user.py
src/apps/users/services/: user.py
src/apps/users/views/: user.py
src/core/: app.py  db.py  middlewares.py  models.py  routers.py
src/core/settings/: __init__.py  cors.py  db.py  logging.py  monitoring.py
src/utils/config/: base.py
src/utils/db/: base.py
src/utils/entities/: base.py
src/utils/middlewares/: __init__.py  structlog.py
src/utils/models/: base.py
src/utils/structlog/: base.py
