[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Rishat Sharafiev <rishatsharafiev@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
gino = {extras = ["starlette"], version = "^1.0.1"}
sentry_sdk = "^0.19.0"
structlog_sentry = "^1.2.2"
structlog = "^20.1.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pep8-naming = "^0.11.1"
flake8 = "^3.8.4"
flake8-django = "^1.1.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-functions = "^0.0.4"
flake8-annotations-complexity = "^0.0.4"
flake8-cognitive-complexity = "^0.0.2"
flake8-pytest = "^1.3"
flake8-mock = "^0.3"
flake8-bandit = "^2.1.2"
flake8-mutable = "^1.2.0"
flake8-print = "^3.1.4"
flake8-debugger = "^3.2.1"
flake8-eradicate = "^0.4.0"
flake8-absolute-import = "^1.0"
black = "^20.8b1"
requests = "^2.24.0"
mock = "^4.0.2"
PyHamcrest = "^2.0.2"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
